public/css/styles.css
*{
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

html {
  max-width: 100%;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
}

body {
  background-color: #FFA600 !important;
  height: auto;
  width: auto;
  margin: 0;
  padding: 0;
  max-width: 100%;
  min-width: 1800px;
  margin: 0 auto;
}

/* Navbar */
.navbar {
  background-color: #FFA600;
  height: 100px;
  width: 100%;
  box-shadow: 0 0 8px 0 #0a0a0a90;
}

.navbar-collapse {
  background-color: #FFA600 !important;
  padding-left: 20px !important;
}

.navbar-search {
  border: 2px solid #49505769;
}

::placeholder {
  color:  #0a0a0a90 !important;
}

.fa.fa-search {
  color: #4950579F !important;
}

.navbar-brand {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  top: 5px;
}

.nav-item {
  padding-right: 1rem;
}

.form-control.search-bar{
  font-style: italic;
  border: none;
  background-color: transparent !important;
}

.form-control.search-bar:focus {
  box-shadow: none;
}

/* Footer */
.footer-section {
  background-color: #0A0A0A;
  height: 180px;
}

.footer-section img {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  top: 10px;
}

.footer-section .social-media-section {
  padding-left: 100px;
}

.footer-section .contact-section {
  padding-right: 100px;
}

.footer-section .follow-title {
  color: #FFFFFF90;
}

.footer-section li {
  list-style-type: none;
}

.footer-section a {
  color: #FFFFFF90;
}

.footer-section a:hover {
  color: #FFFFFF;
  text-decoration: none;
}

.social-media-section .social-media-icons-group i {
  padding-right: 10px;
  font-size: 22px;
}

#admin.fa-user-circle-o {
  margin-top: 10px;
  opacity: 0.7;
}

#admin.fa-user-circle-o:hover {
  opacity: 0.9;
}

.copyright {
  font-size: 14px;
  color: white;
}

/* Header */
.masthead-banner img {
  width: 100%;
}

.btn-masthead .btn {
  color: #FFFFFF;
  padding: 10px 30px 10px 30px;
  background-color: #0A0A0A;
}

.masthead-section .col {
  padding: 0 0 0 0;
}

.btn-masthead .btn:hover {
  color: #cfcfcf;
  background-color: #0A0A0A;
}

/* Features */
.btn-features .btn {
  color: #FFFFFF;
  padding: 10px 30px 10px 30px;
  background-color: #0A0A0A;
}

.btn-features .btn:hover {
  color: #cfcfcf;
  background-color: #0A0A0A;
}

/* Catalogue */
.catalogue-section h5 {
  padding-left: 50px;
}

.catalogue-section a {
  color: #0A0A0A90;
}

.catalogue-section a:hover {
  text-decoration: none;
  color: #0a0a0ad7;
}

.catalogue-section .list-group-item {
  background-color: transparent !important;
}

.apparel-title {
  padding: 0;
  margin: 0;
}

.apparel-card {
  padding: 10px 10px 0 10px;
  margin: 0 10px 10px 0;
  border: none;
  background-color: #ffeccc94;
}


.catalogue-drop {
  background-color: #0A0600;
  padding: 20px 20px 20px 20px;
  display: flex;
}

.item-information-div {
  width: 100%;
  padding-left: 50px;
  color: #FFFBFB;
}

.item-information-div p {
  opacity: 70%;
}

.item-information-div hr.white-line {
  border-top: 1px solid #fffbfb67;
}

.item-information-btn {
  display: flex;
}

.add-to-cart-btn {
  color: #FFFFFF !important;
  padding: 10px 20px 10px 20px !important;
  margin-left: 150px;
  border: 1px solid #fffbfb67 !important;
}

.add-to-cart-btn:hover {
  border: 1px solid #fffbfb !important;
}

.size + input {
  display: none;
}

.size {
  border-radius: 50%;
  padding: 10px 10px 10px 10px;
  margin-right: 10px;
  border: 1px solid #fffbfb67 !important;
}

#small, #medium, #large {
  padding: 10px 15px 10px 15px;
}

.size:hover {
  border: 1px solid #fffbfb !important;
}

.size:checked {
  border: 1px solid #fffbfb !important;
}

.apparel-card-div {
  cursor: pointer;
}

.apparel-card-div + input {
  display: none;
}

.apparel-card-div + input + div {
  display: none;
}

.apparel-card-div + input:checked + div {
  display: block;
}

/* Cart */
.navbar-cart {
  color: #0a0a0a90;
}

.navbar-cart:hover {
  color: #0a0a0ac4;
}

.fa-shopping-cart {
  padding-top: 12px;
}

.fa-trash-o {
  font-size: 21px !important;
}

.cart-item-dropdown:hover {
  background-color: #ffe3b4 !important;
}

.checkout-button {
  margin: 0 20px 10px 0;
}

.checkout-button .btn {
  color: #FFFFFF;
  background-color: #0A0A0A !important;
  padding: 10px 30px 10px 30px;
}

.checkout-button .btn:hover {
  color: #cfcfcf;
}

.cart-drop-menu {
  min-width: 600px !important;
  background-color: #FFECCC !important;
  box-shadow: #0a0a0a50;
}

.out-of-stock p{
  padding: 5px 5px 5px 5px;
}

/* Checkout */
.checkout-img-name p {
  padding-left: 20px;
}

.checkout-card {
  background-color: #FFECCC !important;
  border: 1px solid #0a0a0a50 !important;
  text-align: center !important;
}

.checkout-img-name {
  display: inline-flex;
}

.checkout-section .btn {
  color: #FFFFFF;
  background-color: #0A0A0A !important;
  padding: 10px 30px 10px 30px;
}

.checkout-section .btn:hover {
  color: #cfcfcf;
}

.checkout-out-of-stock {
  padding: 5px;
}

/* Shipping */
.payment-method-btn {
  background-color: #ffeeee !important;
}

.shipping-checkout-btn, .modal-btn {
  color: #FFFFFF !important;
  background-color: #0A0A0A !important;
  padding: 10px 30px 10px 30px !important;
}

.shipping-checkout-btn:hover, .modal-btn:hover {
  color: #cfcfcf !important;
}

/* Catalogue */
.apparel-card-div {
  position: absolute;
  display: block;
}

/* FAQ Page */
.faq-view {
  max-width: 75%;
}

.faq-group {
  display: flex;
  position: relative;
  left: 35%;
  right: 35%;
}

.faq-header {
  position: absolute;
  left: 38%;
  font-family: Poppins;
  font-style: normal;
  font-weight: bold;
  font-size: 30px;
  line-height: 45px;
  color: #000000;
}

.faq-qa {
  font-family: Poppins;
  font-style: normal;
  font-weight: bold;
  font-size: 30px;
  line-height: 45px;
  color: #000000;
}

.faq-question {
  text-align: justify;
  font-family: Poppins;
  font-style: normal;
  font-weight: 500;
  font-size: 28px;
  line-height: 42px;
  color: #000000;
  width: 901px;
  height: 90px;
}

.faq-body {
  text-align: justify;
  font-family: Poppins;
  font-style: normal;
  font-weight: normal;
  font-size: 20px;
  line-height: 30px;
  color: #000000;
  width: 901px;
  height: 102px;
}

/* Contact Us Page */
.cont-group {
  display: flex;
}

.cont-header {
  text-align: center;
  font-family: Poppins;
  font-style: normal;
  font-weight: bold;
  font-size: 30px;
  line-height: 45px;
  color: #000000;
}

.cont-bigtext {
  font-family: Poppins;
  font-style: normal;
  font-weight: bold;
  font-size: 28px;
  line-height: 42px;
  color: #000000;
}

.cont-medtext {
  font-family: Poppins;
  font-style: normal;
  font-weight: bold;
  font-size: 23px;
  line-height: 34px;
  color: #000000;
}

.cont-smtext {
  font-family: Poppins;
  font-style: normal;
  font-weight: normal;
  font-size: 20px;
  line-height: 30px;
  color: #000000;
}

.cont-center {
  position: relative;
  left: 33%;
}

.cont-left {
  position: relative;
  left: 18%;
}

.cont-right {
  position: relative;
  left: 48%;
}

.cont-center2 {
  position: relative;
  left: 38%;
}

.cont-left2 {
  position: relative;
  left: 19%;
}

.cont-right2 {
  position: relative;
  left: 48%;
}

.cont-calign {
  text-align: center;
}

.cont-left-img {
  position: relative;
  left: 21%;
}

.cont-mid-img {
  position: relative;
  left: 41%;
}

.cont-right-img {
  position: relative;
  left: 57%;
}

.contact-section-page {
  height: calc(100vh - 300px);
}

/* Login Page */
.login-bigtext {
  font-family: Poppins;
  font-style: normal;
  font-weight: bold;
  font-size: 30px;
  line-height: 45px;
  letter-spacing: 0.08em;
  color: rgba(10, 10, 10, 0.8);
}

.login-smtext {
  font-family: Poppins;
  font-style: normal;
  font-size: 16px;
  color: #000000;
}

.login-col{
  width: 50%;
  text-align: center;
}

.login-form {
  width: 500px;
  height: 40px;
}

.login-btn {
  width: 120px;
  height: 30px;
}

.login-input {
  background-color: #F5DDA5;
}

/*About Us*/
.au-bigtext {
  font-family: Poppins;
  font-style: normal;
  font-weight: bold;
  font-size: 30px;
  line-height: 45px;
  color: #000000;
}

.au-smtext {
  font-family: Poppins;
  font-style: normal;
  font-weight: normal;
  font-size: 25px;
  line-height: 37px;
  color: #000000;
  text-align: left;
}

.au-center {
  text-align: center;
}

.au-left {
  text-align: left;
}

.about-section {
  height: calc(100vh - 300px);
}

/* Admin - Summary of All Orders */
.summary-orders-section {
  padding-bottom: 200px;
}

.summary-finances,
.summary-finances thead,
.summary-finances tbody,
.summary-finances td,
.summary-finances th {
  background-color: #F5DDA5;
  border: 1px solid #0a0a0a80 !important;
}

.all-orders {
  background-color: #F5DDA5;
}

#table-detail .hidden-row {
  display: none;
}

.order-status-button {
  background-color: #0A0A0A !important;
  border: none !important;
}

.cancel-btn {
  background-color: #006676 !important;
  color: #ffffff !important;
  padding: 10px 30px 10px 30px !important;
}

/*edit pages*/
.edit-title {
  position: relative;
  height: 45px;
  left: 28%;
  font-family: Poppins;
  font-style: normal;
  font-weight: bold;
  font-size: 30px;
  line-height: 45px;
  color: rgba(10, 10, 10, 0.8);
}

.edit-category {
  position: relative;
  height: 45px;
  left: 28%;
  font-family: Poppins;
  font-style: italic;
  font-weight: bold;
  font-size: 30px;
  line-height: 45px;
  color: rgba(10, 10, 10, 0.8);
}

.edit-titlebox {
  position: relative;
  width: 1139px;
  height: 40px;
  left: 28%;
  background: #FEFEFE;
  border: 1px solid rgba(0, 0, 0, 0.3);
  box-sizing: border-box;
  border-radius: 50px;
  padding-left: 25px;
  font-size: 20px;
}

.edit-smbox {
  position: relative;
  width: 1139px;
  height: 40px;
  left: 28%;
  background: #FEFEFE;
  border: 1px solid rgba(0, 0, 0, 0.3);
  box-sizing: border-box;
  border-radius: 50px;
  padding-left: 25px;
  font-size: 20px;
}

.edit-contentbox {
  position: relative;
  width: 1139px;
  height: 301px;
  left: 28%;
  background: #FEFEFE;
  border: 1px solid rgba(0, 0, 0, 0.3);
  box-sizing: border-box;
  border-radius: 50px;
  padding-left: 25px;
  padding-top: 15px;
  font-size: 20px;
}

.edit-btn {
  position: relative;
  width: 193px;
  height: 39px;
  left: 60%;
}

.profile-form {
  width: 200px;
  height: 40px
}
.profile-size {
  width: 40px;
  height: 40px
}

.profile-modal {
  color: #0a0a0a90;
  background-color: #FFA600
}

.profile-modal-footer {
  background-color: #0A0A0A;
  color: #FFFFFF90
}

.profile-section {
  height: calc(100vh - 300px);
}

.about-section {
  height: calc(100vh - 300px);
}

.contact-section-page {
  height: calc(100vh - 300px);
}

